buildscript {
    ext {
        springBootVersion = '2.1.2.RELEASE'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

apply plugin: 'java'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

group = 'kr.co.shineware.nlp.komoran'
version = '1.0.0-SNAPSHOT'
sourceCompatibility = '1.8'

compileJava.options.encoding = "UTF-8"
compileTestJava.options.encoding = "UTF-8"

configurations.all {
    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
}

repositories {
    mavenCentral()
    maven { url "https://jitpack.io" }
}

dependencies {
    // use latest KOMORAN
    compile 'com.github.shin285:KOMORAN:master-SNAPSHOT'

    compile 'org.springframework.boot:spring-boot-starter-web'
    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
    compile 'com.googlecode.json-simple:json-simple:1.1.1'

    // for morph results comparison
    compile 'io.github.java-diff-utils:java-diff-utils:4.0'

    // for Serving user model
    compile 'net.lingala.zip4j:zip4j:2.1.3'

    runtimeOnly 'com.h2database:h2'

    testCompile 'org.springframework.boot:spring-boot-starter-test'
    testCompile 'org.hamcrest:hamcrest-all:1.3'
}

